airflow_deploy.yaml
apiVersion : v1
kind : Service
metadata :
  name : service-airflow
spec :
#  type : LoadBalancer
  type : NodePort
  ports :
  - port : 8080 
    targetPort : 8080
  selector : 
    app: airflow-webserver

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: postgres

---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: redis

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName : postgres
  replicas: 1
  selector :
    matchLabels :
      app : postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts :
            - name : volume-postgres
              mountPath : /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata : 
        name : volume-postgres
      spec : 
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector :
    matchLabels :
      app : redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - name: redis
              containerPort: 6379

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: airflow-webserver
  labels :
    app : airflow-webserver
spec:
  replicas: 1
  template :
    metadata :
      labels :
        app : airflow-webserver
    spec :
      containers:
        - name: airflow-webserver
          image: #container image
          imagePullPolicy : Always
          ports :
            - containerPort : 8080
          args : ["webserver"]
          readinessProbe:
            httpGet:
              path: /admin/airflow/login?next=%2Fadmin%2F
              port: 8080

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: airflow-scheduler
spec:
  replicas: 1
  template :
    metadata :
      labels :
        app : airflow-scheduler
    spec :
      containers:
        - name: airflow-scheduler
          image: #container image
          imagePullPolicy : Always
          args : ["scheduler"]

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: airflow-worker
  labels :
    app : airflow-worker
spec:
  replicas: 1
  template :
    metadata :
      labels :
        app : airflow-worker
    spec :
      containers:
        - name: airflow-worker
          image: #container image
          imagePullPolicy : Always
          args : ["worker"]
