ingress_airflow.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "airflow-ingress-ip" # optional
spec:
  backend:
    serviceName: service-airflow 
    servicePort: 8080
